--- a/src/app/input-decorator-component/input-decorator-component.component.html
+++ b/src/app/input-decorator-component/input-decorator-component.component.html
@@ -1,1 +1,6 @@
-<p>input-decorator-component works!</p>
+<div class="icon-container">
+    <span>
+        <fa-icon class="icon" [icon]="getIcon()"></fa-icon>
+    </span>
+    <ng-content></ng-content>
+</div>
